# clean-code-bot-assure

./: .env.example  README.md  pyproject.toml  requirements.txt
clean_code_bot/: __init__.py  __main__.py  cli.py  client.py  cot.py  extract.py  pipeline.py  security.py
examples/: README.md  order_service_after.py  order_service_after_sample.py  order_service_before.py  rent_roll_import_after.py  rent_roll_import_before.py  stripe_webhook_handler_after.js  stripe_webhook_handler_before.js
examples/fixtures/: rent_roll_acme_plaza.csv
